--- a/wu_page/good_show.html
+++ b/wu_page/good_show.html
@@ -56,41 +56,65 @@
         </div>
     </div>
     <div class="row main">
-        <div class="col-md-2">
-            <ul class="nav nav-pills nav-stacked v-nav">
-                <li role="presentation" class="active"><a href="#">Home</a></li>
-                <li role="presentation"><a href="#">Profile</a></li>
-                <li role="presentation"><a href="#">Messages</a></li>
-            </ul>
-        </div>
-        <div class="col-md-10">
-            <div class="order-list">
-                <div class="row order-container">
-                    <div class="col-md-2"><img src=""></div>
-                    <div class="col-md-4">desc</div>
-                    <div class="col-md-2">price</div>
-                    <div class="col-md-2 status">
-                        <label class="label label-primary peisongzhong">
-                            配送中
-                        </label>
-                        <label class="label label-success hidden yishouhuo">
-                            已收货
-                        </label>
+        <div class="col-md-offset-1 col-md-10">
+            <div class="row good-show-holder">
+                <div class="col-md-4">
+                    <img src="abc" style="width: 100%;height: 100%;">
+                </div>
+                <div class="col-md-8">
+                    <h3>大苹果大苹果大苹果大苹果大苹果大苹果大苹果</h3>
+                    <div>
+                        <label>价格 :</label>
+                        <label class="price"> ¥100.00</label>
+                        <div id="sales-count" class="count pull-right">
+                            <label class="count-name">销量</label>
+                            <br>
+                            <label class="count-number">100000</label>
+                        </div>
+                        <div id="comment-count" class="count pull-right">
+                            <label class="count-name">评价</label>
+                            <br>
+                            <label class="count-number">100000</label>
+                        </div>
                     </div>
-                    <div class="col-md-2 action">
-                        <button class="btn btn-primary confirm_receive">确认收货</button>
+                    <div>
+                        <label style="padding-left: 0;margin: 0;position: relative;top: -10px;">数量 :</label>
+                        <div class="input-group" style="display:inline-table;">
+                            <span class="input-group-addon">-</span>
+                            <input type="number" class="form-control">
+                            <span class="input-group-addon">+</span>
+                        </div>
+                    </div>
+                    <div style="padding-top: 10px;">
+                        <label>库存 :</label>
+                        <label>100件</label>
+                    </div>
+                    <div style="padding-top: 30px;">
+                        <button class="btn btn-primary">立即购买</button>
+                        <button style="margin-left: 50px;" class="btn btn-primary">加入购物车</button>
                     </div>
                 </div>
             </div>
-            <div class="order-list">
-                <div class="row order-container">
-                    <div class="col-md-2"><img src=""></div>
-                    <div class="col-md-4">desc</div>
-                    <div class="col-md-2">price</div>
-                    <div class="col-md-2">status</div>
-                    <div class="col-md-2">
-                        <button class="btn btn-primary">确认收货</button>
+            <div class="row comment-holder">
+                <div>
+
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li style="width: 100px; text-align: center;" role="presentation" class="active">
+                            <a href="#home" aria-controls="home" role="tab"
+                               data-toggle="tab">详情</a>
+                        </li>
+                        <li role="presentation" style="width: 100px; text-align: center;">
+                            <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">评价</a>
+                        </li>
+                    </ul>
+
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="home">详情的内容</div>
+                        <div role="tabpanel" class="tab-pane" id="profile">评价的内容</div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -102,14 +126,6 @@
 <script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script>
-    $(".confirm_receive").click(function () {
-//        if(confirm("确定确认收货?")){
-//
-//        }
-        $(this).attr("disabled", true);
-        var divStatus = $(this).parent().parent().find(".status");
-        divStatus.find(".peisongzhong").hide();
-        divStatus.find(".yishouhuo").removeClass("hidden");
-    })
+
 </script>
 </html>
