--- a/CanvasTuroials31/15.html
+++ b/CanvasTuroials31/15.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>基础粒子系统</title>
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript"
+            src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript">
         $(function () {
             var points=[],
