--- a/book-ljdsaa/ch06.html
+++ b/book-ljdsaa/ch06.html
@@ -59,7 +59,44 @@
           }
           values=otherSet.values();
           for (var i = 0 i < values.length; i++) {
-            unionSet.add(values[i]);   
+            unionSet.add(values[i]);
+          }
+          return unionSet;
+        }
+        // 交集
+        this.intersection=function (otherSet) {
+          var intersectionSet=new Set();
+          var values=this.values();
+          for (var i = 0; i < values.length; i++) {
+            if (otherSet.has(values[i])) {
+              intersectionSet.add(values[i])
+            }
+          }
+          return intersectionSet;
+        }
+        // 差集
+        this.difference=function(otherSet){
+          var differenceSet=new Set();
+          var values=this.values();
+          for (var i = 0; i < values.length; i++) {
+            if (!otherSet.has(values[i])) {
+              differenceSet.add(values[i]);
+            }
+          }
+          return differenceSet;
+        }
+        // 子集
+        this.isSubsetOf=function(otherSet){
+          if(this.size()>otherSet.size()){
+            return false;
+          }else{
+            var values=this.values();
+            for (var i = 0; i < values.length; i++) {
+              if(!otherSet.has(values[i])){
+                return false;
+              }
+            }
+            return true;
           }
         }
       }
